# abyssinian

./: .env.dev  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.dev  init.sql  pyproject.toml
.github/workflows/: cd.yml  ci.yaml
alembic/: env.py
alembic/versions/: 9adf65b51a70_init_db.py  b2b88e7e8e65_init_db.py
src/: config.py  database.py  dependencies.py  main.py  middleware.py
src/core/: auth.py
src/crud/: base.py  users.py
src/dependencies/: auth.py
src/models/: __init__.py  base.py  loaddata.py  users.py
src/models/fixtures/: client_users.yaml  clients.yaml  coach_users.yaml  coaches.yaml  codes.yaml
src/routers/: access_codes.py  api.py  auth.py  clients.py  coaches.py
src/schemas/: base.py  query.py  users.py
tests/: conftest.py  test_main.py
