[tool.poetry]
name = "abyssinian"
version = "0.1.0"
description = ""
authors = ["oswalth <oswalth2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
psycopg2 = "^2.9.3"
pydantic = "^1.9.1"
alembic = "^1.8.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.2"
passlib = "^1.7.4"
mangum = "^0.15.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-dotenv = "^0.5.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
